# react-native-stallion

./: .gitignore  .releaserc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  StallionExceptionHandler.swift  StallionSyncManager.swift  babel.config.js  iOS_BSPATCH_UPDATE.md  package-lock.json  package.json  react-native-stallion.podspec  tsconfig.json
.github/workflows/: ci-pre-release.yml  ci.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt  bspatch_bridge.c  bspatch_bridge.h  stallion_bspatch_jni.cpp  stallion_signal_handler.cpp
example/: .npmrc  app.json  babel.config.js  package-lock.json  package.json  stallion.config.js
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx  Stallion.ts
ios/: Stallion.m  Stallion.swift
ios/Stallion.xcodeproj/: project.pbxproj
ios/main/: Stallion-Bridging-Header.h  Stallion.m  Stallion.swift  StallionApiBaseUrl.swift  StallionBSPatch.swift  StallionConfig.h  StallionConfig.m  StallionConfigConstants.h  StallionConfigConstants.m  StallionConstants.swift  StallionDeviceInfo.swift  StallionDownloadCacheManager.swift  StallionDownloader.swift  StallionErrorBoundary.h  StallionErrorBoundary.m  StallionEventEmitter.swift  StallionEventHandler.h  StallionEventHandler.m  StallionEventManager.h  StallionEventManager.m  StallionExceptionHandler.h  StallionExceptionHandler.m  StallionExceptionHandler.mm  (+29 more)
reference-implementations/: CROSS_PLATFORM_ANALYSIS.md
scripts/: prep-release.js  test-patch-c-code.js
src/: StallionNativeModule.ts  index.tsx
(+199 files in other folders)
